Rama de la Actividad Individual N°4 del Módulo 6

--- a/Módulo_6/blog/templates/blog/quienesSomos.html
+++ b/Módulo_6/blog/templates/blog/quienesSomos.html
@@ -1,7 +1,44 @@
 {% extends "blog/layout.html" %}
 {% load static %}
+<head> 
+    <link rel="stylesheet" href="{% static '/css/quienes-somos.css' %}"   type="text/css"> 
+</head>
+
+
+
+
+
+
 {% block content %}
 
-<p>Somos una página web destinada a compartir libros</p>
+<div id="contenedor-qs">
+    <div id="q-s" class="p-3  bg-dark text-white opacity-75" style="margin: 20px">
+        <h2 class="text-center">Somos una página web destinada a compartir libros</h2>
+            <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. At doloremque provident, corporis quae ullam inventore maiores delectus quod assumenda numquam ipsam quos vero nobis aliquam facilis voluptatum reprehenderit nulla eveniet?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quia eius rem exercitationem doloremque ex necessitatibus architecto delectus provident ratione. Id tempora neque corporis dolores, hic ducimus laboriosam quia eos.
+            Nesciunt corrupti ipsam accusantium et beatae, id quae nemo quas mollitia perferendis quidem modi. Repudiandae maxime, laboriosam ad est expedita repellendus quam molestiae ex recusandae laborum, dolorem natus, autem sit.
+            Expedita, adipisci excepturi nostrum debitis quaerat optio amet facere est dolores, delectus nesciunt, dolor atque! Itaque fugit ea dolorem reiciendis maxime dolor voluptatum pariatur odio ducimus ipsam quo, minima dicta.
+            Incidunt laboriosam harum dolor temporibus! Iste facere debitis provident porro minima magni ipsa quod dolorum magnam aperiam qui ullam et est eius assumenda, deserunt officiis itaque natus doloremque! Consequuntur, debitis!
+            Placeat, nisi. Quis, beatae molestiae. Minus id repellendus possimus neque eaque consectetur ex itaque aliquam vel qui, veritatis nihil amet quam? Sapiente libero quisquam nisi alias. Vitae nihil perferendis ut.
+            Obcaecati, quasi! Nam assumenda perspiciatis debitis. Amet expedita quam, dicta, necessitatibus vitae nulla pariatur veniam nam ducimus architecto nisi cumque quaerat consectetur est esse. Velit quam exercitationem natus nemo illum!
+            Possimus dolorem architecto voluptatem obcaecati, culpa quibusdam, placeat accusamus veniam aspernatur est nihil eligendi officiis atque quas itaque? Debitis consequatur incidunt modi necessitatibus doloremque quia placeat perspiciatis vero quidem voluptatibus.
+            Ab atque provident odit, nihil dignissimos tempora quisquam inventore veniam est ut iure mollitia porro, vitae autem ipsa eum accusantium sunt consectetur voluptate? Necessitatibus quibusdam sapiente repellendus neque quidem mollitia!
+            Atque, consectetur aspernatur! Quaerat, accusamus fuga dignissimos alias doloribus debitis provident hic nostrum est suscipit expedita culpa sint fugiat repellat quia non labore quae. Aspernatur placeat vitae culpa non quasi.
+            Error sit asperiores nam molestiae voluptatum? Consequatur nulla officiis nobis, natus quam mollitia, ducimus illo ad corporis culpa repellendus unde esse quod non eius ex enim aliquid, similique quis. Incidunt!
+            Minus temporibus sit necessitatibus. Magnam quae quidem eum culpa facere exercitationem! Amet mollitia voluptatum, itaque ut, laboriosam, iure assumenda dolore natus nulla saepe soluta officiis ad eos repellat esse! Fugiat!
+            Fuga rem atque id labore dolorum omnis adipisci, quibusdam, maxime sint exercitationem odit, porro eius vitae consequatur corrupti laboriosam. Dolor eius molestias voluptates, pariatur ducimus error minus consequuntur repudiandae nihil?
+            Accusamus blanditiis consectetur quae cumque facere voluptate quibusdam et, asperiores quidem odio qui natus hic nihil esse minima at dolor, neque totam, delectus nulla. Beatae illum rerum facilis sapiente expedita!
+            Sunt veritatis praesentium, itaque animi saepe expedita ipsum ipsa assumenda. Architecto officia tempora tempore, omnis sequi ipsa consequatur incidunt temporibus non distinctio fuga, similique nisi minima iusto! Odit, sit placeat!
+            Numquam sapiente molestiae sunt maxime ab quam dolore vero, quas sequi accusantium! Aliquam laudantium eaque ullam corrupti ratione, tempora repellat eius maiores provident libero modi veritatis, sunt error nesciunt saepe?
+            Eum, ad nesciunt. Consequuntur doloribus autem libero ea impedit. Nemo quidem accusantium officia cupiditate quod beatae facilis obcaecati sapiente natus, similique veritatis, reiciendis placeat, officiis incidunt architecto error maiores harum.
+            In fugit quas temporibus dolorem, non aperiam, exercitationem ea repellat id saepe ad voluptates. Consequuntur, cum magni molestias perspiciatis nostrum accusantium quis aliquid quasi illo impedit obcaecati rem explicabo dolor.
+            Quis, itaque. Veniam obcaecati tenetur dolor. Voluptatem quibusdam adipisci ullam architecto qui autem excepturi blanditiis est? Dignissimos vero libero odio dolor corporis atque expedita natus! Unde excepturi libero necessitatibus provident.
+            Possimus delectus iste sapiente tempore placeat cum modi laboriosam fuga, facilis maxime ipsam maiores, minima quod sit minus obcaecati accusamus? Impedit animi provident facilis debitis quidem quibusdam eligendi tenetur veritatis.
+            Unde ullam aliquid necessitatibus possimus, animi autem omnis doloremque odio. Porro, reprehenderit culpa nisi esse a officia labore nemo veniam consequatur perspiciatis omnis id soluta odio necessitatibus deserunt veritatis quis.
+            </p>
+    </div>
+    
+</div>
+
 
 {% endblock %}
