--- a/Módulo_6/blog/templates/blog/layout.html
+++ b/Módulo_6/blog/templates/blog/layout.html
@@ -7,17 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Mi Blog {% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    
 </head>
 <body>
     <nav  class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<div id="barranav" class="container-fluid justify-content-end" >
-			<ul class="nav nav-pills">
+        
+        <div id="barranav" class="container-fluid justify-content-center" >
+            <ul class="nav nav-pills">
                 <li class="nav-item ">
-					<a class="btn btn-outline-light" aria-current="page" href="{% url 'inicio' %}" id="form-contact">Inicio</a>
+                    <a class="btn btn-outline-light" aria-current="page" href="{% url 'inicio' %}" id="form-contact">Inicio</a>
 				</li>
                 <li class="nav-item ">
-					<a class="btn btn-outline-light" aria-current="page" href="{% url 'quienes-somos' %}" id="form-contact">Quiénes Somos</a>
+                    <a class="btn btn-outline-light" aria-current="page" href="{% url 'quienes-somos' %}" id="form-contact">Quiénes Somos</a>
+				</li>
+                <li id="contenedor-logo">
+                    <a id="liveToastBtn" >
+                        <img id="logo" src="https://img.freepik.com/foto-gratis/viejo-libro-abierto-sobre-fondo-madera-oscura_1373-581.jpg?t=st=1653185347~exp=1653185947~hmac=9b68cf210ed0c54ca30b6c14af635d509bfe7bd990c6fd6f400eec72503b7bad&w=900" alt="">
+                    </a>  
+                </li>
+                <li class="nav-item ">
+					<a class="btn btn-outline-light" aria-current="page" href="{% url 'ingreso_usuarios' %}" id="form-contact">Registrar Usuarios</a>
 				</li>
                 <li class="nav-item ">
 					<a class="btn btn-outline-light" aria-current="page" href="{% url 'usuarios' %}" id="form-contact">Usuarios</a>
@@ -25,21 +35,34 @@
             </ul>
         </div>
     </nav>
-    
-    <div id = "sidebar">
-        <h2>Bienvenido a mi blog</h2>
+<!-- Este apartado contiene la funcionalidad del toast  -->
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
+            <div class="toast-header">
+                <img src="..." class="rounded me-2" alt="...">
+                <strong class="me-auto">¡Aviso!</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">¡Próximamente, esta opción te permitirá conocer un libro al azar desde nuestro catálogo! 
+            </div>
+        </div>
     </div>
+    <script>
+        const toastTrigger = document.getElementById('liveToastBtn')
+        const toastLiveExample = document.getElementById('liveToast')
+        if (toastTrigger) {toastTrigger.addEventListener('click', () => {const toast = new bootstrap.Toast(toastLiveExample)
+        toast.show()})}
+    </script>
+<!-- Aquí termina el apartado de la funcionalidad del toast  -->    
+    {% block content%}
+    {% endblock %}
     
-    <div id = "content">
-        {% block content%}
-        {% endblock %}
-    </div>
     
 
     <footer>
         <nav  class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div id="barranav" class="container-fluid justify-content-center" >
-                <p >Todos los derechos reservados</p>
+                <p class="text-center">Todos los derechos reservados</p>
             </div>
         </nav>
     </footer>
