--- a/Módulo_6/blog/templates/blog/usuarios.html
+++ b/Módulo_6/blog/templates/blog/usuarios.html
@@ -2,23 +2,27 @@
 {% load static %}
 {% block content %}
 
-<div id='tabla'>
-    <table>
-        <tr>
-            <th>Nombre</th>
-            <th>Apellido</th>
-            <th>Correo</th>
-            <th>Ciudad</th>
-            <th>Telefono</th>
-        </tr>
-        {% for usuarios in data %}  
-        <tr>
-            <td>{{usuarios.nombre}}</td>
-            <td>{{usuarios.apellido}}</td>
-            <td>{{usuarios.correo}}</td>
-            <td>{{usuarios.ciudad}}</td>
-            <td>{{usuarios.telefono}}</td>
-        </tr>
+<div >
+    <table class='table table-hover'>
+        <thead> 
+            <tr>
+                <th >Nombre</th>
+                <th >Apellido</th>
+                <th >Correo</th>
+                <th >Ciudad</th>
+                <th >Teléfono</th>
+            </tr>
+        </thead>
+        {% for usuarios in data %}      
+        <tbody>
+            <tr>
+                <td>{{usuarios.nombre}}</td>
+                <td>{{usuarios.apellido}}</td>
+                <td>{{usuarios.correo}}</td>
+                <td>{{usuarios.ciudad}}</td>
+                <td>{{usuarios.telefono}}</td>
+            </tr>
+        </tbody>
         {% endfor %}
     </table>
     
