--- a/Módulo_6/blog/templates/blog/layout.html
+++ b/Módulo_6/blog/templates/blog/layout.html
@@ -11,36 +11,52 @@
     
 </head>
 <body>
+    {% block navbar %}
+<!-- Este apartado contiene los elemtnos del Navbar -->
     <nav  class="navbar navbar-expand-lg navbar-dark bg-dark">
         
         <div id="barranav" class="container-fluid justify-content-center" >
             <ul class="nav nav-pills">
+                <li class="nav-item ">
+					<button type="button" class="btn btn-dark" disabled>{{ user.username | upper }}</button>
+				</li>
                 <li class="nav-item ">
                     <a class="btn btn-outline-light" aria-current="page" href="{% url 'inicio' %}" id="form-contact">Inicio</a>
 				</li>
                 <li class="nav-item ">
                     <a class="btn btn-outline-light" aria-current="page" href="{% url 'quienes-somos' %}" id="form-contact">Quiénes Somos</a>
 				</li>
+                <li class="nav-item ">
+                    <a class="btn btn-outline-light" aria-current="page" href="{% url 'usuarios' %}" id="form-contact">Catálogo</a>
+                </li>
                 <li id="contenedor-logo">
                     <a id="liveToastBtn" >
                         <img id="logo" src="https://img.freepik.com/foto-gratis/viejo-libro-abierto-sobre-fondo-madera-oscura_1373-581.jpg?t=st=1653185347~exp=1653185947~hmac=9b68cf210ed0c54ca30b6c14af635d509bfe7bd990c6fd6f400eec72503b7bad&w=900" alt="">
                     </a>  
                 </li>
                 <li class="nav-item ">
-					<a class="btn btn-outline-light" aria-current="page" href="{% url 'ingreso_usuarios' %}" id="form-contact">Registrar Usuarios</a>
+                    <a class="btn btn-outline-light" aria-current="page" href="{% url 'usuarios' %}" id="form-contact">Comunidad</a>
+                </li>
+                <li class="nav-item ">
+					<a class="btn btn-outline-light" aria-current="page" href="{% url 'register' %}" id="form-contact">Crear cuenta</a>
 				</li>
                 <li class="nav-item ">
-					<a class="btn btn-outline-light" aria-current="page" href="{% url 'usuarios' %}" id="form-contact">Usuarios</a>
+					<a class="btn btn-outline-light" aria-current="page" href="{% url 'login' %}" id="form-contact">Ingresar</a>
+				</li>
+                <li class="nav-item ">
+					<a class="btn btn-outline-light" aria-current="page" href="{% url 'logout' %}" id="form-contact">Salir</a>
 				</li>
             </ul>
         </div>
     </nav>
+<!-- Fin del NavBar -->
+    {% endblock %}
 <!-- Este apartado contiene la funcionalidad del toast  -->
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
         <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
             <div class="toast-header">
                 <img src="..." class="rounded me-2" alt="...">
-                <strong class="me-auto">¡Aviso!</strong>
+                <strong class="me-auto">¡Atención!</strong>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
             <div class="toast-body">¡Próximamente, esta opción te permitirá conocer un libro al azar desde nuestro catálogo! 
@@ -58,7 +74,7 @@
     {% endblock %}
     
     
-
+<!-- Inicio del Footer -->
     <footer>
         <nav  class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div id="barranav" class="container-fluid justify-content-center" >
@@ -66,6 +82,7 @@
             </div>
         </nav>
     </footer>
+<!-- Fin del Footer -->
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </html>
