--- a/Módulo_6/blog/templates/blog/registrar_usuarios.html
+++ b/Módulo_6/blog/templates/blog/registrar_usuarios.html
@@ -6,9 +6,10 @@
     <form action="" method="post">
         <div class="text-center">
             {% csrf_token %}
-            <h3> Ingreso de Usuarios </h3>
+            <h3> Cree su usuario </h3>
 
             {{form.as_p}}
+            
 
             <button id ="btn-registo-usuarios" class = "btn btn-outline-dark" type ="submit"> Registrar </button>
         </div>
