--- a/Módulo_6/blog/templates/blog/usuarios.html
+++ b/Módulo_6/blog/templates/blog/usuarios.html
@@ -6,21 +6,27 @@
     <table class='table table-hover'>
         <thead> 
             <tr>
+                <th >Id</th>
+                <th >Nombre de usuario</th>
                 <th >Nombre</th>
-                <th >Apellido</th>
-                <th >Correo</th>
-                <th >Ciudad</th>
-                <th >Teléfono</th>
+                <th >Correo electrónico</th>
+                <th >Fecha de registro</th>
+                <th >Último Ingreso</th>
+                <th >Es Administrador</th>
             </tr>
         </thead>
-        {% for usuarios in data %}      
+        {% for usuario in data %}      
         <tbody>
             <tr>
-                <td>{{usuarios.nombre}}</td>
-                <td>{{usuarios.apellido}}</td>
-                <td>{{usuarios.correo}}</td>
-                <td>{{usuarios.ciudad}}</td>
-                <td>{{usuarios.telefono}}</td>
+                <td>{{usuario.id}}</td>
+                <td>{{usuario.username}}</td>
+                <td>{{usuario.first_name}}</td>
+                <td>{{usuario.email}}</td>
+                <td>{{usuario.date_joined}}</td>
+                <td>{{usuario.last_login}}</td>
+                <td>{{usuario.is_staff}}</td>
+                <td><a href="registration/update/{{ usuario.id }}">Editar</a></td>
+                <td><a href="registration/delete/{{ usuario.id }}">delete</a></td>
             </tr>
         </tbody>
         {% endfor %}
