--- a/Módulo_6/blog/templates/blog/usuarios.html
+++ b/Módulo_6/blog/templates/blog/usuarios.html
@@ -1,24 +1,40 @@
-{% extends "blog/layout.html" %}
+{% extends "registration/layout.html" %}
 {% load static %}
 {% block content %}
 
-<div id='tabla'>
-    <table>
-        <tr>
-            <th>Nombre</th>
-            <th>Apellido</th>
-            <th>Correo</th>
-            <th>Ciudad</th>
-            <th>Telefono</th>
-        </tr>
-        {% for usuarios in data %}  
-        <tr>
-            <td>{{usuarios.nombre}}</td>
-            <td>{{usuarios.apellido}}</td>
-            <td>{{usuarios.correo}}</td>
-            <td>{{usuarios.ciudad}}</td>
-            <td>{{usuarios.telefono}}</td>
-        </tr>
+<div >
+    <table class='table table-hover'>
+        <thead> 
+            <tr>
+                <th>Id</th>
+                <th>Nombre de usuario</th>
+                <th>Nombre</th>
+                <th>Correo electrónico</th>
+                <th>Fecha de registro</th>
+                <th>Último Ingreso</th>
+                <th>Es Administrador</th>
+                <th>Está Activo</th>
+            </tr>
+        </thead>
+        {% for usuario in data %}      
+        <tbody>
+            <tr>
+                <td>{{usuario.id}}</td>
+                <td>{{usuario.username}}</td>
+                <td>{{usuario.first_name}}</td>
+                <td>{{usuario.email}}</td>
+                <td>{{usuario.date_joined}}</td>
+                <td>{{usuario.last_login}}</td>
+                <td>{{usuario.is_staff}}</td>
+                <td>{{usuario.is_active}}</td>
+                {% if user.is_staff %}
+                <td><a href="/registration/update/{{ usuario.id }}">Editar</a></td>
+                {% endif %}
+                {% if user.is_admin %}
+                <td><a href="/blog/delete/{{ usuario.id }}">delete</a></td>
+                {% endif %}
+            </tr>
+        </tbody>
         {% endfor %}
     </table>
     
