--- a/Módulo_6/blog/templates/registration/login.html
+++ b/Módulo_6/blog/templates/registration/login.html
@@ -3,33 +3,17 @@
 
 
 {% block content %}
-<form action = "" method = "post">
-    {%csrf_token%}
-    <div class= "row">
-        <div class="col-md-3 col-md-offset-3">
-            <h3> Ingrese su usuario </h3>
-            <div class="form-group">
-                <label for="username">Nombre de Usuario:</label> 
-                    <input class="form-control "type="text"  name="username">
-            </div>
+<div class="container-fluid ">
+    <form action="" method="post">
+        <div >
+            
+            <h3> Ingresar </h3>
+            {% csrf_token %}
+            {{form.as_p}}
+            
+            
+            <button id ="btn-registo-usuarios" class = "btn btn-outline-dark" type ="submit" value="Create my account"> Ingresar </button>
         </div>
-    </div>
-    <div class= "row">
-        <div class="col-md-3 col-md-offset-3">
-            <div class="form-group">
-                <label for="password">Contraseña:</label> 
-                    <input class = "form-control" type="password" name="password">
-            </div>
-        </div>
-    </div>
-    <div class= "row" style="margin-top: 20px;">
-        <div class="col-md-3 col-md-offset-3">
-            <div class="form-group">
-                <button class = "btn btn-outline-dark" type ="submit">Iniciar Sesión</button>
-            </div>
-        </div>
-    </div>
-    
-    
-</form>
+    </form>
+</div>
 {% endblock %}
