--- a/Módulo_6/blog/templates/blog/catalogo.html
+++ b/Módulo_6/blog/templates/blog/catalogo.html
@@ -5,6 +5,7 @@
         <thead> 
             <tr>
                 <th >Id</th>
+                <th>Subido por</th>
                 <th >Autor</th>
                 <th >Título</th>
                 <th>Enlace</th>
@@ -20,6 +21,7 @@
         <tbody>
             <tr>
                 <td>{{libro.id}}</td>
+                <td>{{libro.username}}</td>
                 <td>{{libro.autor}}</td>
                 <td>{{libro.titulo}}</td>
                 <td><a href="{{libro.enlace}}">Descargar</a></td>
